css/boot.css
div.state-boot {
  opacity: 0;
}

div.state-boot,
div.state-boot * {
  transition: opacity 0.5s;
}

div.state-boot div.content {
  min-width: fit-content;
  text-align: center !important;
  display: flex;
  flex-direction: column;
}

div.state-boot img.logo {
  height: 150px;
}

div.state-boot div.progressbar {
  margin: 0 auto;
  margin-top: 20px;
  border-radius: 3.5px;
  background-color: rgb(20, 20, 20);
  height: 7px;
}

div.state-boot div.progressbar > div {
  height: 7px;
  background-color: #bbb;
  border-radius: 3.5px;
}

div.state-boot p.status {
  margin-top: 23px;
  text-align: center;
  font-family: var(--font);
  color: #eee;
}

div.state-boot.fadein,
div.state-boot.fadein * {
  opacity: 1;
}
div.state-boot.fadeout,
div.state-boot.fadeout * {
  opacity: 0 !important;
}

